--- a/package.json
+++ b/package.json
@@ -4,15 +4,34 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.22",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/drawer": "^7.7.2",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/stack": "^7.6.2",
+    "expo": "^54.0.23",
+    "expo-auth-session": "~7.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-media-library": "~18.2.0",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
+    "firebase": "^12.5.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-view-shot": "4.0.3",
+    "react-native-worklets": "0.5.1"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "metro": "^0.83.3"
+  }
 }
